welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: ';' expected but double literal found.
	return i.e.25/10
                  ^